fixed overflow

--- a/styles/travel.css
+++ b/styles/travel.css
@@ -3,12 +3,12 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  overflow-x: hidden;
 }
 
 body {
   font-style: normal;
   font-family: "Mulish", sans-serif;
+  overflow-x: hidden;
 }
 
 header,
@@ -158,6 +158,10 @@ nav a {
   justify-content: space-between;
 }
 
+.popular-tour-columns > div {
+  flex-grow: 1;
+}
+
 .popular-tour-col-1 {
   padding-right: 50px;
 }
@@ -226,6 +230,7 @@ nav a {
 .image-container {
   position: relative;
   text-align: center;
+  overflow: hidden;
 }
 
 .image-caption {
@@ -412,7 +417,7 @@ footer {
   }
 
   .popular-tour-col-1 {
-    padding-right: 50px;
+    padding-right: 0px;
   }
 
   .popular-tour-col-1 .section-description {
@@ -424,6 +429,7 @@ footer {
   }
 
   .popular-tour-image img {
+    width: 100%;
     height: 100%;
   }
 
